@@ -9,7 +9,7 @@ public class CannonCraftingWandItem extends Item {
 	public CannonCraftingWandItem(Properties properties) {
 		super(properties);
 	}
-	
+
 	@Override
 	public InteractionResult useOn(UseOnContext context) {
 		return context.getLevel().getBlockEntity(context.getClickedPos()) instanceof WandActionable wanded ? wanded.onWandUsed(context) : InteractionResult.PASS;
